--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="210dp"
         android:layout_height="210dp"
         android:adjustViewBounds="true"
-        android:src="@mipmap/water"
+        android:src="@mipmap/water2"
         android:layout_marginRight="37dp"
         android:layout_marginEnd="37dp"
         android:layout_alignTop="@+id/editText"
