--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="210dp"
         android:layout_height="210dp"
         android:adjustViewBounds="true"
-        android:src="@mipmap/water2"
+        android:src="@mipmap/water3"
         android:layout_marginRight="37dp"
         android:layout_marginEnd="37dp"
         android:layout_alignTop="@+id/editText"
@@ -38,6 +38,15 @@
         android:layout_below="@+id/editText"
         android:layout_alignLeft="@+id/editText"
         android:layout_alignStart="@+id/editText" />
+
+    <Button
+        android:id="@+id/button2"
+        android:text="投稿"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/editText"
+        android:layout_toRightOf="@id/button"/>
 
     <ImageView
         android:layout_width="70dp"
