--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,101 +1,105 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".MainActivity"
-    android:weightSum="1">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:gravity="center"
+tools:context=".MainActivity"
+android:weightSum="1">
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="180dp"
-        android:id="@+id/editText"
-        android:layout_weight="0.18"
-        android:layout_marginLeft="34dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+<EditText
+    android:layout_width="300dp"
+    android:layout_height="180dp"
+    android:id="@+id/editText"
+    android:layout_weight="0.18"
+    android:layout_marginLeft="34dp"
+    android:layout_centerVertical="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:background="#DDDDDD"
+    android:gravity="top|left" />
 
-    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/imageView2"
-        android:layout_width="210dp"
-        android:layout_height="210dp"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/water3"
-        android:layout_marginRight="37dp"
-        android:layout_marginEnd="37dp"
-        android:layout_alignTop="@+id/editText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/imageView2"
+    android:layout_width="210dp"
+    android:layout_height="210dp"
+    android:adjustViewBounds="true"
+    android:src="@mipmap/water3"
+    android:layout_marginRight="37dp"
+    android:layout_marginEnd="37dp"
+    android:layout_alignTop="@+id/editText"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
 
-    <Button
-        android:id="@+id/button"
-        android:text="画像を選択"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+<Button
+    android:id="@+id/button"
+    android:text="画像を選択"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:layout_below="@+id/editText"
+    android:layout_alignLeft="@+id/editText"
+    android:layout_alignStart="@+id/editText" />
 
-    <Button
-        android:id="@+id/button2"
-        android:text="投稿"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/editText"
-        android:layout_toRightOf="@id/button"/>
+<Button
+    android:id="@+id/button2"
+    android:text="投稿"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:layout_below="@+id/editText"
+    android:layout_toRightOf="@id/button"
+    android:onClick="alertDialogShow" />
 
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:id="@+id/image_view"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3" />
+<ImageView
+    android:layout_width="70dp"
+    android:layout_height="70dp"
+    android:id="@+id/image_view"
+    android:layout_alignBottom="@+id/imageView2"
+    android:layout_toRightOf="@+id/textView3"
+    android:layout_toEndOf="@+id/textView3" />
 
-    <TextView
-        android:layout_width="160dp"
-        android:layout_height="100dp"
-        android:id="@+id/textView"
-        android:layout_above="@+id/image_view"
-        android:layout_alignRight="@+id/imageView2"
-        android:layout_alignEnd="@+id/imageView2" />
+<TextView
+    android:layout_width="160dp"
+    android:layout_height="100dp"
+    android:id="@+id/textView"
+    android:layout_above="@+id/image_view"
+    android:layout_alignRight="@+id/imageView2"
+    android:layout_alignEnd="@+id/imageView2"
+    android:layout_marginRight="19dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="投稿文章"
-        android:id="@+id/textView2"
-        android:layout_above="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:text="投稿文章"
+    android:id="@+id/textView2"
+    android:layout_above="@+id/editText"
+    android:layout_alignLeft="@+id/editText"
+    android:layout_alignStart="@+id/editText" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="プレビュー"
-        android:id="@+id/textView3"
-        android:layout_above="@+id/imageView2"
-        android:layout_alignLeft="@+id/imageView2"
-        android:layout_alignStart="@+id/imageView2" />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:text="プレビュー"
+    android:id="@+id/textView3"
+    android:layout_above="@+id/imageView2"
+    android:layout_alignLeft="@+id/imageView2"
+    android:layout_alignStart="@+id/imageView2" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/Latitude"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/Longitude"
-        android:layout_below="@+id/Latitude"
-        />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:id="@+id/Latitude"
+    />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:id="@+id/Longitude"
+    android:layout_below="@+id/Latitude"
+    />
 
 </RelativeLayout>
