--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,18 +88,18 @@ android:weightSum="1">
     android:layout_alignLeft="@+id/imageView2"
     android:layout_alignStart="@+id/imageView2" />
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceSmall"
-    android:id="@+id/Latitude"
-    />
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceSmall"
-    android:id="@+id/Longitude"
-    android:layout_below="@+id/Latitude"
-    />
+<!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+    <!--android:id="@+id/Latitude"-->
+    <!--/>-->
+<!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+    <!--android:id="@+id/Longitude"-->
+    <!--android:layout_below="@+id/Latitude"-->
+    <!--/>-->
 
 </RelativeLayout>
