--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@ android:weightSum="1">
 
 <Button
     android:id="@+id/button"
-    android:text="画像を選択"
+    android:text="画像添付"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
@@ -41,23 +41,31 @@ android:weightSum="1">
     android:layout_alignLeft="@+id/editText"
     android:layout_alignStart="@+id/editText" />
 
-<Button
-    android:id="@+id/button2"
-    android:text="投稿"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_below="@+id/editText"
-    android:layout_toRightOf="@id/button"
-    android:onClick="alertDialogShow" />
 
-<ImageView
+    <Button
+        android:id="@+id/button2"
+        android:text="投稿"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/editText"
+        android:layout_toRightOf="@id/button"
+
+        android:onClick="alertDialogShow" />
+
+
+    <ImageView
     android:layout_width="70dp"
     android:layout_height="70dp"
     android:id="@+id/image_view"
     android:layout_alignBottom="@+id/imageView2"
     android:layout_toRightOf="@+id/textView3"
     android:layout_toEndOf="@+id/textView3" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 <TextView
     android:layout_width="160dp"
