--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -1,6 +1,25 @@
+
 <resources>
     <!-- Example customization of dimensions originally defined in res/values/dimens.xml
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+
+    <dimen name="widthsize1">400dp</dimen>
+    <dimen name="widthsize2">420dp</dimen>
+    <dimen name="widthsize3">140dp</dimen>
+    <dimen name="widthsize4">320dp</dimen>
+
+    <dimen name="heightsize1">360dp</dimen>
+    <dimen name="heightsize2">420dp</dimen>
+    <dimen name="heightsize3">140dp</dimen>
+    <dimen name="heightsize4">200dp</dimen>
+
+    <dimen name="weightsize1">0.36dp</dimen>
+    <dimen name="weightsize2">96dp</dimen>
+
+    <dimen name="marginsize1">68dp</dimen>
+    <dimen name="marginsize2">74dp</dimen>
+    <dimen name="marginsize3">38dp</dimen>
+
 </resources>
