--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/imageView2"
         android:layout_width="@dimen/widthsize2"
-        android:layout_height="@dimen/heightsize1"
+        android:layout_height="@dimen/heightsize2"
         android:adjustViewBounds="true"
         android:src="@mipmap/water3"
         android:layout_marginRight="@dimen/marginsize2"
@@ -56,17 +56,20 @@
         android:layout_height="@dimen/heightsize3"
         android:id="@+id/image_view"
         android:layout_alignBottom="@+id/imageView2"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3" />
+        android:layout_alignLeft="@+id/imageView2"
+        android:layout_marginLeft="@dimen/marginsize5"
+        android:layout_marginBottom="@dimen/marginsize7"
+        android:layout_alignStart="@+id/imageView2" />
 
     <TextView
         android:layout_width="@dimen/widthsize4"
         android:layout_height="@dimen/heightsize4"
         android:id="@+id/textView"
         android:layout_above="@+id/image_view"
-        android:layout_alignRight="@+id/imageView2"
-        android:layout_alignEnd="@+id/imageView2"
-        android:layout_marginRight="@dimen/heightsize3" />
+        android:layout_marginTop="@dimen/marginsize6"
+        android:layout_marginLeft="@dimen/marginsize4"
+        android:layout_alignLeft="@+id/imageView2"
+        android:layout_alignStart="@+id/imageView2" />
 
     <TextView
         android:layout_width="wrap_content"
