--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -6,14 +6,14 @@
     <dimen name="activity_horizontal_margin">64dp</dimen>
 
     <dimen name="widthsize1">400dp</dimen>
-    <dimen name="widthsize2">420dp</dimen>
-    <dimen name="widthsize3">140dp</dimen>
-    <dimen name="widthsize4">320dp</dimen>
+    <dimen name="widthsize2">400dp</dimen>
+    <dimen name="widthsize3">150dp</dimen>
+    <dimen name="widthsize4">300dp</dimen>
 
-    <dimen name="heightsize1">360dp</dimen>
-    <dimen name="heightsize2">420dp</dimen>
-    <dimen name="heightsize3">140dp</dimen>
-    <dimen name="heightsize4">200dp</dimen>
+    <dimen name="heightsize1">400dp</dimen>
+    <dimen name="heightsize2">400dp</dimen>
+    <dimen name="heightsize3">150dp</dimen>
+    <dimen name="heightsize4">130dp</dimen>
 
     <dimen name="weightsize1">0.36dp</dimen>
     <dimen name="weightsize2">96dp</dimen>
@@ -21,5 +21,9 @@
     <dimen name="marginsize1">68dp</dimen>
     <dimen name="marginsize2">74dp</dimen>
     <dimen name="marginsize3">38dp</dimen>
+    <dimen name="marginsize4">50dp</dimen>
+    <dimen name="marginsize5">125dp</dimen>
+    <dimen name="marginsize6">70dp</dimen>
+    <dimen name="marginsize7">30dp</dimen>
 
 </resources>
